Main Page Shapes Add

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,8 +28,7 @@ import tailyUI from 'taily-ui'
                     title: 'Research more',
                     link: '/'
                 },
-                github: 'https://github.com/nikdelvin/scientry',
-                images: ['/main-1.png', '/main-2.png', '/main-3.png']
+                github: 'https://github.com/nikdelvin/scientry'
             })}
         />
     </main>
