--- a/src/pages/[...theme].astro
+++ b/src/pages/[...theme].astro
@@ -137,7 +137,7 @@ const colorTheme =
                         to: getDate(new Date(Date.now() + 3 * 30 * 24 * 60 * 60 * 1000)),
                         title: 'Phase I: Database models builder',
                         description: [
-                            { type: 'default', value: 'Powerful' },   
+                            { type: 'default', value: 'Powerful' },
                             { type: 'primary', value: 'constructor' },
                             { type: 'default', value: 'to create' },
                             { type: 'primary', value: 'models' },
@@ -154,7 +154,7 @@ const colorTheme =
                         to: getDate(new Date(Date.now() + (6 * 30 + 1) * 24 * 60 * 60 * 1000)),
                         title: 'Phase II: Entries tables & APIs',
                         description: [
-                            { type: 'default', value: 'Auto generated' },     
+                            { type: 'default', value: 'Auto generated' },
                             { type: 'primary', value: 'APIs' },
                             { type: 'default', value: 'directly from' },
                             { type: 'primary', value: 'database' }
@@ -170,10 +170,10 @@ const colorTheme =
                         to: getDate(new Date(Date.now() + (9 * 30 + 2) * 24 * 60 * 60 * 1000)),
                         title: 'Phase III: Authorization & storage',
                         description: [
-                            { type: 'default', value: 'Make' },    
+                            { type: 'default', value: 'Make' },
                             { type: 'primary', value: 'user' },
                             { type: 'default', value: 'sign ups, logins and files' },
-                            { type: 'primary', value: 'secure' },
+                            { type: 'primary', value: 'secure' }
                         ],
                         role: [
                             'Incredibly simple auth without a single external authentication service. Built-in authentication, authorization & user management',
