Taily UI update

--- a/src/pages/[...theme].astro
+++ b/src/pages/[...theme].astro
@@ -97,7 +97,7 @@ const colorTheme =
                     'Free open-source SDK for self-hosting on your personal computer, VPS or dedicated server'
                 ],
                 button: {
-                    title: 'Learn more',
+                    title: 'Create database',
                     link: '#features_2'
                 }
             })}
@@ -121,7 +121,7 @@ const colorTheme =
                     'In-build SDK for CRUD operations with your data, web socket connections, pub/sub services & more'
                 ],
                 button: {
-                    title: 'Learn more',
+                    title: 'Train ML model',
                     link: '#stages'
                 }
             })}
