--- a/src/pages/[...theme].astro
+++ b/src/pages/[...theme].astro
@@ -337,7 +337,7 @@ const colorTheme =
                             { type: 'default', value: 'Fullstack React / Python web developer.' },
                             { type: 'primary', value: 'Product:' },
                             { type: 'default', value: 'Big-data service for analyzing counterparties affiliations.' },
-                            { type: 'primary', value: 'Info', link: 'https://github.com/nikdelvin', newPage: true },
+                            { type: 'primary', value: 'Info', link: 'https://github.com/nikdelvin/affiliation-checker', newPage: true },
                             { type: 'default', value: '<div style="padding:8px;"></div>' },
                             { type: 'default', value: 'Total time on development "battlefield":' },
                             {
@@ -380,7 +380,7 @@ const colorTheme =
                             { type: 'primary', value: '04.08.20:' },
                             {
                                 type: 'default',
-                                value: 'Modified genetic algorithm as a new approach for solving the problem of 3d packaging.'
+                                value: 'Modified genetic algorithm to solve 3d packaging problem.'
                             },
                             {
                                 type: 'primary',
@@ -392,7 +392,7 @@ const colorTheme =
                             { type: 'primary', value: '24.12.21:' },
                             {
                                 type: 'default',
-                                value: 'Development of an information system for organizing the work of a production workshop.'
+                                value: 'Auto-optimization system for product manufacturing workflow.'
                             },
                             {
                                 type: 'primary',
@@ -408,7 +408,15 @@ const colorTheme =
                                 value: 'Read',
                                 link: 'https://ieeexplore.ieee.org/document/10303830',
                                 newPage: true
-                            }
+                            },
+                            { type: 'default', value: '<div style="padding:8px;"></div>' },
+                            { type: 'default', value: 'Researches open-source repo:' },
+                            {
+                                type: 'primary',
+                                value: 'GitHub',
+                                link: 'https://github.com/nikdelvin/research-projects',
+                                newPage: true
+                            },
                         ]
                     }
                 ]
