--- a/src/pages/[...theme].astro
+++ b/src/pages/[...theme].astro
@@ -48,7 +48,7 @@ const colorTheme =
                     { type: 'primary', value: 'beautiful' },
                     {
                         type: 'default',
-                        value: 'dashboards with compact, easy to use and fully customizable CMS for'
+                        value: 'dashboards with compact, easy-to-use, and fully customizable CMS for'
                     },
                     { type: 'secondary', value: 'Data Management' }
                 ],
@@ -94,7 +94,7 @@ const colorTheme =
                 featureOptions: [
                     'Powered with fast relational SQLite database and data visualization core based on D3.js library',
                     'Content type customization to generate database structure and apply it immediately to your data. Included flexible user permissions management',
-                    'Free open-source SDK for self-hosting on your personal computer, VPS or dedicated server'
+                    'Free open-source SDK for self-hosting on your personal computer, VPS, or dedicated server'
                 ],
                 button: {
                     title: 'Create database',
@@ -116,8 +116,8 @@ const colorTheme =
                     { type: 'secondary', value: 'science' }
                 ],
                 featureOptions: [
-                    'Real-time database with user authentication, custom edge functions, data RESTful APIs and file storage',
-                    'Connect your favorite ML models, prepare data, train, test, showcase the metrics, loss, learning rate, accuracy & comparison graphs. Visualize everything',
+                    'Real-time database with user authentication, custom edge functions, RESTful APIs & file storage',
+                    'Connect your favorite ML models, prepare data, train, test. Showcase metrics, loss, learning rate, accuracy & comparison graphs. Visualize everything',
                     'In-build SDK for CRUD operations with your data, web socket connections, pub/sub services & more'
                 ],
                 button: {
@@ -138,7 +138,7 @@ const colorTheme =
                         title: 'Phase I: Database models builder',
                         description: [
                             { type: 'default', value: 'Powerful' },
-                            { type: 'primary', value: 'constructor' },
+                            { type: 'primary', value: 'tool' },
                             { type: 'default', value: 'to create' },
                             { type: 'primary', value: 'models' },
                             { type: 'default', value: 'easily' }
@@ -154,15 +154,15 @@ const colorTheme =
                         to: getDate(new Date(Date.now() + (6 * 30 + 1) * 24 * 60 * 60 * 1000)),
                         title: 'Phase II: Entries tables & APIs',
                         description: [
-                            { type: 'default', value: 'Auto generated' },
-                            { type: 'primary', value: 'APIs' },
+                            { type: 'default', value: 'Auto-generated' },
+                            { type: 'primary', value: 'API' },
                             { type: 'default', value: 'directly from' },
                             { type: 'primary', value: 'database' }
                         ],
                         role: [
                             'Simplified no-code tool for adding, editing, and updating database entries, and managing collections and relations between them',
                             'Dashboard for adding tables, columns, and rows right into the DB. Visual interface for building connections throughout your data',
-                            'RESTful APIs generated from your database and designed to get you building as fast as possible, without writing a single line of code'
+                            'RESTful APIs: generated from your database and designed to get you building as fast as possible, without writing a single line of code'
                         ]
                     },
                     {
@@ -172,19 +172,19 @@ const colorTheme =
                         description: [
                             { type: 'default', value: 'Make' },
                             { type: 'primary', value: 'user' },
-                            { type: 'default', value: 'sign ups, logins and files' },
+                            { type: 'default', value: 'sign-ups, logins, and files' },
                             { type: 'primary', value: 'secure' }
                         ],
                         role: [
                             'Incredibly simple auth without a single external authentication service. Built-in authentication, authorization & user management',
-                            'Social providers integration like Google, Apple ID, Facebook, Twitter, GitHub, Discord, and many more to make user login even faster',
+                            'Social providers integration like Google, Apple, Facebook, Twitter, GitHub, Discord and many more to make user login even faster',
                             'Open-source S3 compatible object store with unlimited scalability for any file type secured by custom policies and permissions'
                         ]
                     },
                     {
                         from: getDate(new Date(Date.now() + (9 * 30 + 3) * 24 * 60 * 60 * 1000)),
                         to: getDate(new Date(Date.now() + (12 * 30 + 3) * 24 * 60 * 60 * 1000)),
-                        title: 'Phase IV: Machine learning & metrics',
+                        title: 'Phase IV: Machine learning, metrics',
                         description: [
                             { type: 'default', value: 'Build-in' },
                             { type: 'primary', value: 'toolkit' },
@@ -195,7 +195,7 @@ const colorTheme =
                         role: [
                             'SQLite Vector Similarity Search extension to store, query, and index your vector embeddings at scale in a SQLite database instance',
                             'AI toolkit for easy connection & integration with LLM or embedding API, including OpenAI, Hugging Face, SageMaker, and more',
-                            'D3.js visualization core for charts, metrics, logs, traces, profiles, and other pre-built solutions like ready-to-use dashboards, KPIs, alerts'
+                            'D3.js visualization core for charts, metrics, logs, traces, profiles & other pre-built solutions like ready-to-use dashboards, KPIs, alerts'
                         ]
                     }
                 ]
@@ -278,7 +278,7 @@ const colorTheme =
                             { type: 'primary', value: 'Brodly', link: 'https://brodly.by.nikdelv.in', newPage: true },
                             {
                                 type: 'default',
-                                value: '<br/>High-secure and fully anonymous live streaming platform for everyone'
+                                value: '<br/>High-secure and fully anonymous live-streaming platform for everyone'
                             },
                             { type: 'default', value: '<div style="padding:8px;"></div>' },
                             { type: 'primary', value: 'Neuroly', link: 'https://neuroly.by.nikdelv.in', newPage: true },
@@ -291,7 +291,7 @@ const colorTheme =
                             { type: 'primary', value: 'Scripty', link: 'https://scripty.by.nikdelv.in', newPage: true },
                             {
                                 type: 'default',
-                                value: '<br/>Practice-oriented educational platform to learn JavaScript & WebDev'
+                                value: '<br/>Practice-oriented educational platform to learn JavaScript'
                             },
                             { type: 'default', value: '<div style="padding:8px;"></div>' },
                             { type: 'primary', value: 'Feelicy', link: 'https://feelicy.by.nikdelv.in', newPage: true },
@@ -320,7 +320,7 @@ const colorTheme =
                             { type: 'primary', value: 'Role:' },
                             { type: 'default', value: 'Team leader / DevOps / Backend developer.' },
                             { type: 'primary', value: 'Product:' },
-                            { type: 'default', value: 'Cross-platform mobile app & internal ERP system.' },
+                            { type: 'default', value: 'Cross-platform mobile app, internal ERP system.' },
                             { type: 'primary', value: 'Info', link: 'https://bso.ae', newPage: true },
                             { type: 'default', value: '<div style="padding:8px;"></div>' },
                             { type: 'primary', value: '19.01.21 - 11.05.22:' },
@@ -337,7 +337,12 @@ const colorTheme =
                             { type: 'default', value: 'Fullstack React / Python web developer.' },
                             { type: 'primary', value: 'Product:' },
                             { type: 'default', value: 'Big-data service for analyzing counterparties affiliations.' },
-                            { type: 'primary', value: 'Info', link: 'https://github.com/nikdelvin/affiliation-checker', newPage: true },
+                            {
+                                type: 'primary',
+                                value: 'Info',
+                                link: 'https://github.com/nikdelvin/affiliation-checker',
+                                newPage: true
+                            },
                             { type: 'default', value: '<div style="padding:8px;"></div>' },
                             { type: 'default', value: 'Total time on development "battlefield":' },
                             {
@@ -416,7 +421,7 @@ const colorTheme =
                                 value: 'GitHub',
                                 link: 'https://github.com/nikdelvin/research-projects',
                                 newPage: true
-                            },
+                            }
                         ]
                     }
                 ]
