--- a/src/pages/[...theme].astro
+++ b/src/pages/[...theme].astro
@@ -35,6 +35,10 @@ const colorTheme =
 <Layout
     title="Welcome to Scientry"
     description="Self-hosted, all-in-one Data Management & Visualization solution for scientific researchers."
+    keywords="data analyst, database analyst, big data and data analytics, business intelligence analyst, business analytics software, bi analyst, google data analytics cert, certified data analyst, master of data science online, master of science in data analytics, data analysis in python, google data analytics, entry level data analyst, jr data analyst, data analysis software, coursera data analytics, master in data analytics, healthcare data analyst, sql for data analysis, coursera data analyst, junior data scientist, sql for data analytics, data analytics companies, master data analytics online, data analyst portfolio"
+    url="https://scientry.by.nikdelv.in/"
+    imageUrl="https://nikdelv.in/projects/scientry.jpg"
+    brand="Scientry"
     color={colorTheme}
 >
     <main class="select-none overflow-hidden">
