--- a/src/pages/[...theme].astro
+++ b/src/pages/[...theme].astro
@@ -59,8 +59,9 @@ const colorTheme =
                 description:
                     'Self-hosted, all-in-one Data Management & Visualization solution for scientific researchers.',
                 button: {
-                    title: 'Research more',
-                    link: '#kpi'
+                    title: 'Try it out',
+                    link: 'https://scientry.app.nikdelv.in',
+                    newPage: true
                 },
                 github: 'https://github.com/nikdelvin/scientry'
             })}
@@ -285,8 +286,13 @@ const colorTheme =
                                 value: '<br/>High-secure and fully anonymous live-streaming platform for everyone'
                             },
                             { type: 'default', value: '<div style="padding:8px;"></div>' },
-                            { type: 'primary', value: 'Neuroly', link: 'https://neuroly.by.nikdelv.in', newPage: true },
-                            { type: 'default', value: '<br/>STT and voice synthesis AI chatbot' }
+                            {
+                                type: 'primary',
+                                value: 'Scientry',
+                                link: 'https://scientry.by.nikdelv.in',
+                                newPage: true
+                            },
+                            { type: 'default', value: '<br/>Data management & visualization tool' }
                         ]
                     },
                     {
@@ -304,13 +310,8 @@ const colorTheme =
                                 value: '<br/>Mind mapping and goal planning service in game format of Garden Sim'
                             },
                             { type: 'default', value: '<div style="padding:8px;"></div>' },
-                            {
-                                type: 'primary',
-                                value: 'Scientry',
-                                link: 'https://scientry.by.nikdelv.in',
-                                newPage: true
-                            },
-                            { type: 'default', value: '<br/>Data management & visualization tool' }
+                            { type: 'primary', value: 'Neuroly', link: 'https://neuroly.by.nikdelv.in', newPage: true },
+                            { type: 'default', value: '<br/>STT and voice synthesis AI chatbot' }
                         ]
                     },
                     {
