--- a/src/pages/[...theme].astro
+++ b/src/pages/[...theme].astro
@@ -79,7 +79,7 @@ const colorTheme =
                 ],
                 button: {
                     title: 'Make the first step',
-                    link: '/'
+                    link: '#features'
                 }
             })}
         />
